--- a/src/app/cross-counters/components/cross-counters/counter/counter.component.scss
+++ b/src/app/cross-counters/components/cross-counters/counter/counter.component.scss
@@ -1,8 +1,12 @@
 span {
     padding: 4px 10px 6px;
-    margin-left: 15px;
-    border: 1px solid;
+    border: 1px solid black;
     border-radius: 5px;
+}
+
+.black {
+    color: black;
+    border-color: black;
 }
 
 .red {
